Added low level design concepts